<resources>
    <string name="app_name">akaka</string>
    <string name="Sign">Sign In</string>
    <string name="pass">Password</string>
    <string name="user">Username</string>
    <string name="account">Sign Up</string>
    <string name="conf">Confirm Password</string>
    <string name="enter">Submit</string>
    <string name="app">Patsinde</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="others">Others</string>
    <string name="sign_out">Sign out</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">create an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="viva">Viva Kazembe</string>
    <string name="title_activity_main_activity2hgkd">MainActivity2hgkd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_patsinde">Welcome To Patsinde</string>
    <string name="new_stories">NEW STORIES</string>
    <!-- Strings used for fragments for navigation -->
    <string-array name="title_folktale">
        <item>folktale2</item>
        <item>folktale3</item>
        <item>folktale</item>
        <item>folktale5</item>
        <item>folktale6</item>
        <item>folktale7</item>
        <item>folktale8</item>
        <item>folktale9</item>

    </string-array>

    <string-array name="details_folktale">
        <item>folktale2</item>
        <item>folktale3</item>
        <item>folktale</item>
        <item>folktale5</item>
        <item>folktale6</item>
        <item>folktale7</item>
        <item>folktale8</item>
        <item>folktale9</item>
    </string-array>

</resources>